--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,9 +1,11 @@
 footer {
-    background-color:#00FF00;
-    height:60px;
-    width:100%;
-    position:fixed;
-    bottom: 0;
+    background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: fixed;
+        align-items: center;
+        text-align: center;
+        bottom: 0;
 }
 
 p {
