--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,12 @@
 footer {
-    background-color: white;
-    height:60px;
-    width:100%;
-    border-top: 1px solid #CCCCCC;
-
+    background-color: #ffffff;
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    align-items: center;
+    text-align: center;
     bottom: 0;
+    border-top: 1px solid #cccccc;
 }
 
 p {
