--- a/web_static/styles/4-header.css
+++ b/web_static/styles/4-header.css
@@ -1,15 +1,18 @@
 header {
-    color: white;
+    background-color: #ffffff;
     height: 70px;
     width: 100%;
-    border-bottom: 1px solid #CCCCCC;
+    position: fixed;
+    text-align: center;
+    border-bottom: 1px solid #cccccc;
+    top: 0;
 
 }
 
-header .logo {
-      background-image: url("../images/logo.png");
+header .AiBnBlogo {
+      background-image: url("../images/icon.png");
       background-repeat: no-repeat;
-      display: block;
+      display: flex;
       height: 100%;
       padding-left: 20px;
 }
