--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -11,7 +11,7 @@ header {
 }
 
 header .AiBnBlogo {
-      background-image: url("../images/icon.png");
+      background-image: url("../images/logo.png");
       background-repeat: no-repeat;
       display: block;
       height: 100%;
