--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,29 +1,3 @@
-.filters{
-    background-color:white;
-    height:70px;
-    width:100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    position: relative;
-    margin-top: 90px;
-    padding-top: 30px;
-    /* align-items: center; 
-    display: flex;
-    justify-content: flex-end; */
-}
-
-button{
-    font-size: 18px;
-    background-color:#FF5A5F;
-    color: #700f0f;
-    height: 48px;
-    width: 20%;
-    border-radius: 4px;
-    border: none;
-    position: absolute;
-    right: 30px;
-    top: 10px;
-}
 
 button:hover {
     opacity: 0.9;
@@ -31,4 +5,30 @@ button:hover {
 .cont{
     justify-content: right;
     align-content: center;
+}
+button{
+    font-size: 18px;
+    background-color: #ff5a5f;
+    height: 48px;
+    width: 20%;
+    border-radius: 4px;
+    border: none;
+    right: 30px;
+    top: 10px;
+    position: absolute;
+}
+.container{
+    max-width: 1000px;
+    margin-top: 30px;
+}
+.filters{
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    margin-top: 90px;
+    position:relative;
+    display: flex;
+    justify-content: flex-end;
 }
